--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -1,91 +1,10 @@
 <div
-	id='HomeContainer'
-	class='home'
+	id='HomeFragment'
 	ng-show='view == Views.HOME'
 	style='vertical-align:middle;float:middle;'
 	>
 
-	<br/>
-
-	<div class='header'>
-		gpxmaps.net
-	</div>
 	<div>
-		&copy; 2015 david barkhuizen 
+		home is where the hos are
 	</div>
-
-	<br/>
-
-	<div>
-		manage, view, analyse, edit and export
-		<br/>
-		.GPX GPS files
-	</div>
-
-	<br/>
-
-	<div>
-		<a href="#" class='underline' ng-click='gotoView(Views.IMPORT);'>import gpx files</a>
-		<br/>
-		<a href="#" class='underline' ng-click='gotoView(Views.GPX_DATABASE);'>my gpx files</a>
-	</div>
-
-	<br/>
-	<br/>
-
-	<div class='subtext'>
-		<ul>
-			<span class='bold'>Global Positioning System (GPS)</span>
-			<li>
-				<a href='https://en.wikipedia.org/wiki/Global_Positioning_System' target='_blank'
-					>Global Positioning System @ Wikipedia</a>
-			</li>
-			<li>
-				<a href='http://www.topografix.com/gpx.asp' target='_blank'
-					>GPX @ TopoGrafix</a>
-			</li>
-			<li>
-				<a href='http://www.topografix.com/GPX/1/1/' target='_blank'
-					>GPX 1.1 Schema Documentation @ TopoGrafix</a>	
-			</li>
-		</ul>
-
-		<ul>
-			<span class='bold'>GPX File Format</span>
-			<li>
-				<a href='https://en.wikipedia.org/wiki/GPS_Exchange_Format' target='_blank'
-					>GPS Exchange Format @ Wikipedia</a>
-			</li>
-			<li>
-				<a href='http://www.topografix.com/gpx.asp' target='_blank'
-					>GPX @ TopoGrafix</a>
-			</li>
-			<li>
-				<a href='http://www.topografix.com/GPX/1/1/' target='_blank'
-					>GPX 1.1 Schema Documentation @ TopoGrafix</a>	
-			</li>
-		</ul>
-
-		<ul>
-			<span class='bold'>Online Tools</span>
-			<li>
-				<a href='http://www.gpsvisualizer.com/' target='_blank'
-					>gpsvisualizer.com</a>
-			</li>
-		</ul>
-						
-		<ul>
-			<span class='bold'>OEMS / GPS Device Manufacturers</span>
-			<li>
-				<a href='http://www.garmin.com/' target='_blank'
-					>garmin.com</a>
-			</li>
-			<li>
-				<a href='http://tomtom.com' target='_blank'
-					>tomtom.com</a>
-			</li>
-		</ul>
-	</div>
-
-
 </div>
