--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -1,5 +1,3 @@
-.red { color:red; }
-
 /* -----------------------------------------------------------*/
 /* LAYOUT */
 
@@ -30,41 +28,55 @@ html, body {
 }
 
 /* ----------------------------------------------------------------------*/
+
+.red { color:red; }
+
+.active {
+    color:purple;
+}
+
+.inactive {
+    color:darkgrey;
+}
+
+.action-required {
+    color:red;
+}
+
+.no-action-required {
+    color:green;
+}
+
+.selected-text {
+    color:blue;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+/* ----------------------------------------------------------------------*/
 /* NAVBAR */
 
 .navbar {
     width:100%;
     color:white;
-    background:darkblue;
+    background:#a9bc48;
 }
 
 .navbar-inner {
     vertical-align:'middle';
-    padding:5px;
+    margin-left:6px;
+    margin-top:6px;
 }
 
-.navbar-select {
-    color:black;
-    background:white;
-
-    font-family: courier !important;
-    font-size: 20px !important;
-    font-weight: bold !important;
+.nav-active {
+    color: white;
 }
 
-.navbar-inner > div > .nav-active 
-{
-    color:white;
-}
-
-.navbar-inner > div > .nav-inactive
-{
-    color:lightgrey;
-}
-
-.navbar-inner > div > a.nav-inactive
-{
-    text-decoration: none;
+.nav-inactive {
+    color:  #767676;    
 }
 
 /* -----------------------------------------------------------*/
@@ -121,56 +133,6 @@ html, body {
 
     padding:10px;
     text-align: left;
-}
-
-/* -----------------------------------------------------------*/
-/* MAP */
-
-/* LAYER Z-INDICES */
-
-#mapContainer {
-    position: relative;
-}
-
-.map-canvas {
-    z-index: 1;
-    display:inline-block;
-}
-
-.map-selection-area {
-    z-index: 2;
-    position: absolute;
-}
-
-.map-context-menu {
-    z-index: 3;
-    position: absolute;
-}
-
-.right-overlay-menu {
-    z-index: 4;
-    position: absolute;
-}
-
-/* STYLING */
-
-/* ORANGE RECTANGULAR SELECT */
-.map-selection-area {    
-
-    -webkit-box-shadow:inset 0px 0px 0px 5px orange;
-    -moz-box-shadow:inset 0px 0px 0px 5px orange;
-    box-shadow:inset 0px 0px 0px 5px orange;
-}
-
-.right-overlay-menu {
-    text-align:right;
-}
-
-/* -------------------------------------------------------*/
-
-a {
-    color:purple;
-    text-decoration: none;
 }
 
 /* -----------------------------------------------------------*/
@@ -269,53 +231,6 @@ a {
 .fixed-height-100 {
     min-height: 100px;
     max-height: 100px;
-}
-
-/* ----------------------------------------------------------------------*/
-/* COLOURS */
-
-.active {
-    color:purple;
-}
-
-.inactive {
-    color:darkgrey;
-}
-
-.action-required {
-    color:red;
-}
-
-.no-action-required {
-    color:green;
-}
-
-.selected-text {
-    color:blue;
-}
-
-
-/* -------------------------------------------------------*/
-/* GRID */
-
-.grid-cell-text {
-    text-align:left;
-}
-
-.grid {
-    font-size: 15px;
-}
-
-.grid-short {
-    height:150px;
-}
-
-.grid-medium {
-    height:300px;
-}
-
-.grid-long {
-    height:450px;
 }
 
 /* -------------------------------------------------------*/
