--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -1,7 +1,64 @@
 <div id='navbar' class='navbar' >
 	<div class='navbar-inner'>
-		<div style='float:left;'>
-			<span style='color:yellow;'>Fisher Roeland</span>
+
+	<div style='float:left;'>
+		<img
+			ng-src="/static/img/logo/FisherRoelandProperties.logo.185x64.png"
+			alt="Fisher Roeland Proprties" />
+	</div>
+
+	<div style='float:left;margin-left:12px;margin-top:18px;'>
+		<div style='color:#76767;'>
+			<a href='#' 
+				ng-click="gotoView(Views.HOME);"
+				ng-class="view == Views.HOME ? 'nav-active' : 'nav-inactive'"
+				>home</a>
+			<a href='#' 
+				class='underline'
+				ng-click="gotoView(Views.CONTACT);"
+				ng-class="view == Views.CONTACT ? 'nav-active' : 'nav-inactive'"
+				>contact us</a>
+		</div>
+		<div>
+			<a href='#' 
+				ng-click="gotoView(Views.COMMERCIAL);"
+				ng-class="view == Views.COMMERCIAL ? 'nav-active' : 'nav-inactive'"
+				>commercial</a>
+			<a href='#' 
+				ng-click="gotoView(Views.INDUSTRIAL);"
+				ng-class="view == Views.INDUSTRIAL ? 'nav-active' : 'nav-inactive'"
+				>industrial</a>
+			<a href='#' 
+				ng-click="gotoView(Views.RESIDENTIAL);"
+				ng-class="view == Views.RESIDENTIAL ? 'nav-active' : 'nav-inactive'"
+				>residential</a>
+			<a href='#' 
+				ng-click="gotoView(Views.BUSINESS);"
+				ng-class="view == Views.BUSINESS ? 'nav-active' : 'nav-inactive'"
+				>business</a>
+			<a href='#' 
+				ng-click="gotoView(Views.HOTEL);"
+				ng-class="view == Views.HOTEL ? 'nav-active' : 'nav-inactive'"
+				>hotels</a>
+			<a href='#' 
+				ng-click="gotoView(Views.RETAIL);"
+				ng-class="view == Views.RETAIL ? 'nav-active' : 'nav-inactive'"
+				>retail</a>
+			<a href='#' 
+				class='underline'
+				ng-click="gotoView(Views.INVESTMENT);"
+				ng-class="view == Views.INVESTMENT ? 'nav-active' : 'nav-inactive'"
+				>investment properties</a>
+			<a href='#' 
+				ng-click="gotoView(Views.SOLD);"
+				ng-class="view == Views.SOLD ? 'nav-active' : 'nav-inactive'"
+				>sold</a>
+		</div>
+	</div>
+			<!-- <span style='color:yellow;'>Fisher Roeland</span> -->
+
+
+<!-- 		<div style='float:left;'>
 			
 			&nbsp;
 
@@ -23,16 +80,17 @@
 				>all properties</a>	
 
 		</div>
+ -->
 
-		<div style='float:right;'>
+<!-- 		<div style='float:right;'>
 			<a href='#' 
 				ng-click="gotoView(Views.CONTACT);"
 				ng-class="view == Views.CONTACT ? 'nav-active' : 'nav-inactive'"
 				class="underline"
 				>contact us</a>
 		</div>
-		
-		<div style='clear:both;'>
-		</div>
+ -->		
+		<!-- <div style='clear:both;'>
+		</div> -->
 	</div>
 </div>
