--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -4,30 +4,14 @@
 	style='vertical-align:middle;float:middle;'
 	>
 
-	<div>
-		home is where the hos are
-	</div>
-	<div>
-		<a class="twitter-timeline"  href="https://twitter.com/property24" data-widget-id="621299416310415360">Tweets by @property24</a>
+	<br/>
+
+	<div class='header'>
+		welcome to Fisher Roeland Properties
 	</div>
 
-	            
-          
+	<br/>
+
+	<div>
+	</div>
 </div>
-<script>
-	!function(d,s,id){
-		var 
-			js,
-			fjs = d.getElementsByTagName(s)[0],
-			p = /^http:/.test(d.location)
-				? 'http'
-				: 'https';
-
-			if (!d.getElementById(id)) {
-				js = d.createElement(s);
-				js.id = id;
-				js.src = p + "://platform.twitter.com/widgets.js";
-				fjs.parentNode.insertBefore(js,fjs);
-			}
-	}(document,"script","twitter-wjs");
-</script>
