--- a/django_web_server/static/fragments/business.html
+++ b/django_web_server/static/fragments/business.html
@@ -4,7 +4,11 @@
 	style='vertical-align:middle;float:middle;'
 	>
 
-	<div>
-		business
+	<br/>
+
+	<div class='header'>
+		business properties
 	</div>
+
+	<br/>
 </div>
