--- a/django_web_server/static/fragments/commercial.html
+++ b/django_web_server/static/fragments/commercial.html
@@ -4,7 +4,11 @@
 	style='vertical-align:middle;float:middle;'
 	>
 
-	<div>
-		home is where the hos are
+	<br/>
+
+	<div class='header'>
+		business properties
 	</div>
+
+	<br/>
 </div>
