--- a/django_web_server/static/fragments/industrial.html
+++ b/django_web_server/static/fragments/industrial.html
@@ -4,7 +4,12 @@
 	style='vertical-align:middle;float:middle;'
 	>
 
-	<div>
-		industrial
+
+	<br/>
+
+	<div class='header'>
+		industrial properties
 	</div>
+
+	<br/>
 </div>
