--- a/django_web_server/static/fragments/contact.html
+++ b/django_web_server/static/fragments/contact.html
@@ -4,7 +4,8 @@
 	style='vertical-align:middle;float:middle;'
 	>
 
-	<div>
-		contacto
+	<br/>
+	<div class='header'>
+		contact us
 	</div>
 </div>
