--- a/django_web_server/static/fragments/business.html
+++ b/django_web_server/static/fragments/business.html
@@ -1,6 +1,6 @@
 <div
 	id='BusinessFragment'
-	ng-show='view == Views.BUSINESS'
+	ng-show='showView(Views.BUSINESS)'
 	style='vertical-align:middle;float:middle;'
 	>
 
