--- a/django_web_server/static/fragments/commercial.html
+++ b/django_web_server/static/fragments/commercial.html
@@ -1,6 +1,6 @@
 <div
 	id='CommercialFragment'
-	ng-show='view == Views.COMMERCIAL'
+	ng-show='showView(Views.COMMERCIAL)'
 	style='vertical-align:middle;float:middle;'
 	>
 
