--- a/django_web_server/static/fragments/contact.html
+++ b/django_web_server/static/fragments/contact.html
@@ -1,6 +1,6 @@
 <div
 	id='ContactFragment'
-	ng-show='view == Views.CONTACT'
+	ng-show='showView(Views.CONTACT)'
 	style='vertical-align:middle;float:middle;'
 	>
 
