--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -1,6 +1,6 @@
 <div
 	id='HomeFragment'
-	ng-show='view == Views.HOME'
+	ng-show='showView(Views.HOME)'
 	style='vertical-align:middle;float:middle;'
 	>
 
@@ -12,8 +12,7 @@
 
 	<br/>
 
-
-	<div class='FRP-grey'>
+	<div class='FRP-green'>
 		we offer development opportunities
 		<br/>
 		across sectors
