--- a/django_web_server/static/fragments/hotel.html
+++ b/django_web_server/static/fragments/hotel.html
@@ -1,6 +1,6 @@
 <div
 	id='HotelFragment'
-	ng-show='view == Views.HOTEL'
+	ng-show='showView(Views.HOTEL)'
 	style='vertical-align:middle;float:middle;'
 	>
 
