--- a/django_web_server/static/fragments/industrial.html
+++ b/django_web_server/static/fragments/industrial.html
@@ -1,6 +1,6 @@
 <div
 	id='IndustrialFragment'
-	ng-show='view == Views.INDUSTRIAL'
+	ng-show='showView(Views.INDUSTRIAL)'
 	style='vertical-align:middle;float:middle;'
 	>
 
