--- a/django_web_server/static/fragments/investment.html
+++ b/django_web_server/static/fragments/investment.html
@@ -1,6 +1,6 @@
 <div
 	id='InvestmentFragment'
-	ng-show='view == Views.INVESTMENT'
+	ng-show='showView(Views.INVESTMENT)'
 	style='vertical-align:middle;float:middle;'
 	>
 
