--- a/django_web_server/static/fragments/social.html
+++ b/django_web_server/static/fragments/social.html
@@ -1,6 +1,6 @@
 <div
 	id='SocialFragment'
-	ng-show='view == Views.SOCIAL'
+	ng-show='showView(Views.SOCIAL)'
 	style='vertical-align:middle;float:middle;'
 	ng-controller='SocialController'
 	>
