--- a/django_web_server/static/fragments/sold.html
+++ b/django_web_server/static/fragments/sold.html
@@ -1,6 +1,6 @@
 <div
 	id='SoldFragment'
-	ng-show='view == Views.SOLD'
+	ng-show='showView(Views.SOLD)'
 	style='vertical-align:middle;float:middle;'
 	>
 
