--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -11,52 +11,52 @@
 		<div style='color:#76767;'>
 			<a href='#' 
 				ng-click="gotoView(Views.HOME);"
-				ng-class="view == Views.HOME ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.HOME) ? 'nav-active' : 'nav-inactive'"
 				>home</a>
 			<a href='#' 
 				ng-click="gotoView(Views.SOCIAL);"
-				ng-class="view == Views.SOCIAL ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.SOCIAL) ? 'nav-active' : 'nav-inactive'"
 				class='underline'
 				>social media</a>
 			<a href='#' 
 				class='underline'
 				ng-click="gotoView(Views.CONTACT);"
-				ng-class="view == Views.CONTACT ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.CONTACT) ? 'nav-active' : 'nav-inactive'"
 				>contact us</a>
 		</div>
 		<div>
 			<a href='#' 
 				ng-click="gotoView(Views.COMMERCIAL);"
-				ng-class="view == Views.COMMERCIAL ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.COMMERCIAL) ? 'nav-active' : 'nav-inactive'"
 				>commercial</a>
 			<a href='#' 
 				ng-click="gotoView(Views.INDUSTRIAL);"
-				ng-class="view == Views.INDUSTRIAL ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.INDUSTRIAL) ? 'nav-active' : 'nav-inactive'"
 				>industrial</a>
 			<a href='#' 
 				ng-click="gotoView(Views.RESIDENTIAL);"
-				ng-class="view == Views.RESIDENTIAL ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.RESIDENTIAL) ? 'nav-active' : 'nav-inactive'"
 				>residential</a>
 			<a href='#' 
 				ng-click="gotoView(Views.BUSINESS);"
-				ng-class="view == Views.BUSINESS ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.BUSINESS) ? 'nav-active' : 'nav-inactive'"
 				>business</a>
 			<a href='#' 
 				ng-click="gotoView(Views.HOTEL);"
-				ng-class="view == Views.HOTEL ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.HOTEL) ? 'nav-active' : 'nav-inactive'"
 				>hotels</a>
 			<a href='#' 
 				ng-click="gotoView(Views.RETAIL);"
-				ng-class="view == Views.RETAIL ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.RETAIL) ? 'nav-active' : 'nav-inactive'"
 				>retail</a>
 			<a href='#' 
 				class='underline'
 				ng-click="gotoView(Views.INVESTMENT);"
-				ng-class="view == Views.INVESTMENT ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.INVESTMENT) ? 'nav-active' : 'nav-inactive'"
 				>investment properties</a>
 			<a href='#' 
 				ng-click="gotoView(Views.SOLD);"
-				ng-class="view == Views.SOLD ? 'nav-active' : 'nav-inactive'"
+				ng-class="nlIsActive(Views.SOLD) ? 'nav-active' : 'nav-inactive'"
 				>sold</a>
 		</div>
 	</div>
