--- a/django_web_server/static/fragments/retail.html
+++ b/django_web_server/static/fragments/retail.html
@@ -1,6 +1,6 @@
 <div
 	id='RetailFragment'
-	ng-show='view == Views.RETAIL'
+	ng-show='showView(Views.RETAIL)'
 	style='vertical-align:middle;float:middle;'
 	>
 
