--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -65,6 +65,20 @@ a {
     float:left;
 }
 
+.float-left {
+    float:left;
+}
+
+.float-right {
+    float:left;
+}
+
+.clear-both {
+    clear:both;
+}
+
+
+
 /* ----------------------------------------------------------------------*/
 /* NAVBAR */
 
@@ -181,18 +195,11 @@ a {
 /* LIST */
 
 .list {
-    width:95%;
-
     overflow:scroll;
     overflow-y:scroll;
     overflow-x:hidden;
 
     text-align: left;
-
-    /*
-    padding-left:10px;
-    padding-right:10px;
-    */
 }
 
 /* ------------------ */
@@ -257,6 +264,18 @@ a {
 
 .margin-left-20 {
     margin-left: 20px;
+}
+
+.margin-right-20 {
+    margin-right: 20px;
+}
+
+.margin-right-30 {
+    margin-right: 30px;
+}
+
+.margin-right-40 {
+    margin-right: 40px;
 }
 
 /* -------------------------------------------------------*/
