--- a/django_web_server/static/fragments/residential.html
+++ b/django_web_server/static/fragments/residential.html
@@ -11,8 +11,21 @@
 	</div>
 
 	<br/>
+	
+	( {{ model.propertiesForCategory("residential").length }} )
 
-	<div ng-repeat='p in model.properties | filter: model.categoryMatch("residential")'>
-		<a style='color:#a9bc48 !important;' href="#" ng-click="viewProperty(p)">{{ p.name  }}</a>
+	<br/>
+	<br/>
+
+	<div class='list fixed-height-300 margin-left-20' style='width:95%;text-align:center;'>
+		<div ng-repeat='p in model.properties | filter: model.categoryMatch("residential")'>
+			<a
+				title={{p['title']}}
+				class='FRP-grey'
+				href="#"
+				ng-click="viewProperty(p)">
+			{{ p.name }} - {{ p.stands.length }} stands
+			</a>
+		</div>
 	</div>
 </div>
