--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -22,7 +22,12 @@
 
 	<div>
 		<div ng-repeat='categoryView in model.categoryViews'>
-			<a href="#" ng-click='gotoView(categoryView.view)'>{{ categoryView.category }}</a>
+			<a href="#" ng-click='gotoView(categoryView.view)'>
+			{{ categoryView.category }}
+			<span ng-show='model.propertiesForCategory(categoryView.category).length > 0'>
+			&nbsp;({{ model.propertiesForCategory(categoryView.category).length }})
+			</span>
+			</a>
 		</div>
 	</div>
 
