--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -129,14 +129,15 @@ a {
     width:100%;
     height:100%;
     background-color:#000000;
-    opacity: 0.8;
+    opacity: 1.0;
 }
 
 .modal-container {
 
     z-index:10000;
     position: absolute;
-    width: 50%;
+    width: 70%;
+    /*height: 75%;*/
 
     opacity: 1;
 
