--- a/django_web_server/static/fragments/modal.html
+++ b/django_web_server/static/fragments/modal.html
@@ -2,17 +2,43 @@
 	<div class='modal-overlay' ng-show='(showModal == true)'>
 		<div class='modal-container'>
 			<div class='modal-content'>
-				<div>
-					{{ modalTitle }}
+				<div style='text-align:center;'>
+					{{ model.selectedProperty.name }}
+					<br/>
+
+					<a href="#" ng-click='model.selectPreviousStandForProperty(model.selectedStand)'>
+						&#8592;
+					</a>	
+					&nbsp;			
+					
+					Stand {{ model.standPropertyNumber(model.selectedStand) }} of {{ model.selectedProperty.stands.length }}
+
+					&nbsp;
+					<a href="#" ng-click='model.selectNextStandForProperty(model.selectedStand)'>
+						&#8594;
+					</a>
+
+					<br/>
+					<br/>
+					{{ model.standAreaText(model.selectedStand); }}
 				</div>
+				
 				<br/>
-				<div>
-					<a href='#' ng-click='onCancel();'
-						>cancel</a>
-					<a href='#' ng-click='click1();'
-						>{{ button1Text }}</a>
-					<a href='#' ng-click='click2();'
-						>{{ button2Text }}</a>
+
+				<div class='list fixed-height-200' style='text-align:center;'>
+					<div class='FRP-green' ng-repeat='line in model.selectedStand.situationDescription'>
+						{{ line }}
+					</div>
+				</div>
+
+				<br/>
+
+				<div style='text-align:center;'>
+					<a href='#' ng-click='enquireAfterPriceOfSelectedProperty()' class='underline'
+						>enquire after price</a>
+					<br/>
+					<a href='#' ng-click='closeModal();' class='underline'
+						>return to {{ model.selectedProperty.name }}</a>
 				</div>
 			</div>
 		</div>
