consistency - green anchors

--- a/django_web_server/static/fragments/modal.html
+++ b/django_web_server/static/fragments/modal.html
@@ -34,7 +34,9 @@
 				<br/>
 
 				<div style='text-align:center;'>
-					<a href='#' ng-click='enquireAfterPriceOfSelectedProperty()' class='underline'
+					<a style='color:green;text-decoration:underline !important;'
+
+						href='#' ng-click='enquireAfterPriceOfSelectedProperty()' class='underline'
 						>enquire after price</a>
 					<br/>
 					<a href='#' ng-click='closeModal();' class='underline'
