--- a/django_web_server/templates/admin/base_site.html
+++ b/django_web_server/templates/admin/base_site.html
@@ -1,3 +1,5 @@
+<!-- /usr/lib/python2.7/dist-packages/django/contrib/admin/templates/admin -->
+
 {% extends "admin/base.html" %}
 {% load i18n %}
 
