--- a/django_web_server/templates/sites.html
+++ b/django_web_server/templates/sites.html
@@ -1,10 +1,10 @@
 <html>
+	<title>Site Data Model Manager</title>
 	<head>
 		<script type="text/javascript">		
 			setInterval(function(){
 				window.location.reload(true);
-				console.log('xxx'); 
-			} , 5000);
+			} , 10000);
 		</script>
 	</head>
 	<body>
