init site model - create group w model access permissions, create users and add to group

--- a/django_web_server/templates/sites.html
+++ b/django_web_server/templates/sites.html
@@ -1,11 +1,11 @@
 <html>
 	<title>Site Data Model Manager</title>
 	<head>
-		<script type="text/javascript">		
+		<!--script type="text/javascript">		
 			setInterval(function(){
 				window.location.reload(true);
 			} , 10000);
-		</script>
+		</script-->
 	</head>
 	<body>
 		<div style='font-weight:bold;'>
