--- a/django_web_server/templates/admin/base_site.html
+++ b/django_web_server/templates/admin/base_site.html
@@ -3,10 +3,8 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans 'Site Data Model Manager' %}{% endblock %}
-
-{% block branding %}
-<h1 id="site-name">{% trans 'Site Data Model Manager' %}</h1>
+{% block title %}
+Site Data Model Manager
 {% endblock %}
 
-{% block nav-global %}{% endblock %}
+
