--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -1,101 +1,52 @@
-<div id='navbar' class='navbar' >
-	<div class='navbar-inner'>
+<div>
+	<div style="width:100%;" class='light-grey-background'>
 
-	<div style='float:left;'>
-		<img
-			ng-src="/static/img/logo/FisherRoelandProperties.logo.185x64.png"
-			alt="Fisher Roeland Proprties" />
-	</div>
-
-	<div style='float:left;margin-left:12px;margin-top:6px;'>
-		<div style='color:#76767;'>
-			<a href='#' 
+		<div class='nav' style='padding-left:100px;'>
+			<span>
+		  		<img
+					ng-src="/static/image/logo.png"
+					alt="Fisher Roeland Properties" />
+			</span>
+		  	<span style='padding-left:100px;'>
+				<a href='#' 
 				ng-click="gotoView(Views.HOME);"
 				ng-class="nlIsActive(Views.HOME) ? 'nav-active' : 'nav-inactive'"
-				>home</a>
-			<a href='#' 
-				ng-click="gotoView(Views.SOCIAL);"
-				ng-class="nlIsActive(Views.SOCIAL) ? 'nav-active' : 'nav-inactive'"
-				class='underline'
-				>social media</a>
-			<a href='#' 
-				class='underline'
-				ng-click="gotoView(Views.CONTACT);"
-				ng-class="nlIsActive(Views.CONTACT) ? 'nav-active' : 'nav-inactive'"
-				>contact us</a>
-		</div>
-		<div>
-			<a href='#' 
+					>Home</a>
+				<a href='#' 
 				ng-click="gotoView(Views.COMMERCIAL);"
 				ng-class="nlIsActive(Views.COMMERCIAL) ? 'nav-active' : 'nav-inactive'"
-				>commercial</a>
-			<a href='#' 
+					>Commercial</a>
+				<a href='#' 
 				ng-click="gotoView(Views.INDUSTRIAL);"
 				ng-class="nlIsActive(Views.INDUSTRIAL) ? 'nav-active' : 'nav-inactive'"
-				>industrial</a>
-			<a href='#' 
+					>Industrial</a>
+				<a href='#' 
 				ng-click="gotoView(Views.RESIDENTIAL);"
 				ng-class="nlIsActive(Views.RESIDENTIAL) ? 'nav-active' : 'nav-inactive'"
-				>residential</a>
-			<a href='#' 
+					>Residential</a>
+				<a href='#' 
 				ng-click="gotoView(Views.BUSINESS);"
 				ng-class="nlIsActive(Views.BUSINESS) ? 'nav-active' : 'nav-inactive'"
-				>business</a>
-			<a href='#' 
+					>Business</a>
+				<a href='#' 
 				ng-click="gotoView(Views.HOTEL);"
 				ng-class="nlIsActive(Views.HOTEL) ? 'nav-active' : 'nav-inactive'"
-				>hotels</a>
-			<a href='#' 
+					>Hotels</a>
+				<a href='#' 
 				ng-click="gotoView(Views.RETAIL);"
 				ng-class="nlIsActive(Views.RETAIL) ? 'nav-active' : 'nav-inactive'"
-				>retail</a>
-			<a href='#' 
+					>Retail</a>
+				<a href='#' 
 				class='underline'
 				ng-click="gotoView(Views.INVESTMENT);"
 				ng-class="nlIsActive(Views.INVESTMENT) ? 'nav-active' : 'nav-inactive'"
-				>investment properties</a>
-			<a href='#' 
+					>Investment</a>
+				<a href='#' 
 				ng-click="gotoView(Views.SOLD);"
 				ng-class="nlIsActive(Views.SOLD) ? 'nav-active' : 'nav-inactive'"
-				>sold</a>
+					>Sold</a>
+		  	</span>
 		</div>
-	</div>
-			<!-- <span style='color:yellow;'>Fisher Roeland</span> -->
 
-
-<!-- 		<div style='float:left;'>
-			
-			&nbsp;
-
-			<a href='#' 
-				ng-click="gotoView(Views.HOME);"
-				ng-class="view == Views.HOME ? 'nav-active' : 'nav-inactive'"
-				>home</a>
-			
-			<a href='#' 
-				class='underline'
-				ng-click="gotoView(Views.CATEGORY);"
-				ng-class="view == Views.CATEGORY ? 'nav-active' : 'nav-inactive'"
-				>by category</a>
-			
-			<a href='#' 
-				ng-click="gotoView(Views.PROPERTIES);"
-				ng-class="view == Views.PROPERTIES ? 'nav-active' : 'nav-inactive'"
-				class='underline'
-				>all properties</a>	
-
-		</div>
- -->
-
-<!-- 		<div style='float:right;'>
-			<a href='#' 
-				ng-click="gotoView(Views.CONTACT);"
-				ng-class="view == Views.CONTACT ? 'nav-active' : 'nav-inactive'"
-				class="underline"
-				>contact us</a>
-		</div>
- -->		
-		<!-- <div style='clear:both;'>
-		</div> -->
 	</div>
 </div>
