--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -1,309 +1,98 @@
-.hide {
-    display:none;
-}
-
-/* -----------------------------------------------------------*/
-/* LAYOUT */
-
-/* no outline */
+/* selected element does not have outline */
 a:focus,
 input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-    outline: none;
+	outline: none;
 }
+
+/* --------------------------------------------------------------------------------- */
+
+.hide {
+	display:none;
+}
+
+/* GOOGLE FONTS -------------------------------------------------------------------- */
+
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 300;
+	src: local('Open Sans Light'), local('OpenSans-Light'), url(http://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTegdm0LZdjqr5-oayXSOefg.woff2) format('woff2'), url(http://fonts.gstatic.com/s/opensans/v13/DXI1ORHCpsQm3Vp6mXoaTXhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2'), url(http://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+}
+@font-face {
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 700;
+	src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+
+.grey-text {
+	color: #676767;
+}
+
+.green-text {
+	color: #a0bf14;
+}
+
+/* --------------------------------------------------------------------------------- */
 
 html, body {
-    height: 100%;
-    width: 100%;
+	width: 100%;
  
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 
-    font-family: verdana !important;
-    font-size: 20px;
-    font-weight: bold;
+	font-family: 'Open Sans', sans-serif;
 }
-
-.wrapper {
-    display: table;
-    width: 100%;
-    height: 100%;
-}
-
-.wrapper > div {
-    display: table-row
-}
-
-.wrapper > div > div {
-    display: table-cell;
-}
-
-/* ----------------------------------------------------------------------*/
-
-.red { color:red; }
-
-.FRP-grey {
-    color:#828282;
-}
-
-.FRP-green {
-    color:#a9bc48;
-}
-
 
 a {
-    text-decoration: none;
-    color:green;
+	text-decoration:none !important;
 }
 
-.label {
-    min-width:300px;
-    width:300px;
+/* --------------------------------------------------------------------------------- */
+/* NAV BAR */
 
-    float:left;
-}
-
-.label-value {
-    float:left;
-}
-
-.float-left {
-    float:left;
-}
-
-.float-right {
-    float:left;
-}
-
-.clear-both {
-    clear:both;
-}
-
-
-
-/* ----------------------------------------------------------------------*/
-/* NAVBAR */
-
-.navbar {
-    width:100%;
-    color:white;
-    background:#a9bc48;
-}
-
-.navbar-inner {
-    vertical-align:'middle';
-    margin-left:6px;
-    margin-top:6px;
+.light-grey-background {
+	background-color: #f0f0f0;
 }
 
 .nav-active {
-    color: white;
-    /*font-size: 28px;*/
-    text-transform:capitalize;
+	color: #a0bf14; /* green-text */
+	font-weight: bold;
 }
 
 .nav-inactive {
-    color: lightgrey;
-    /*color:  #767676;*/    
+	color: #676767; /* grey-text */
+	font-weight: bold;
 }
 
-/* -----------------------------------------------------------*/
-/* VIEWPORT */
+div.nav {
+  display: table;
 
-.viewport {
-    width:100%;
-    height:100%;
-    text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-/* -----------------------------------------------------------*/
-/* MODAL */
-
-.modal-overlay {
-    position:absolute;
-    z-index:9999;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background-color:#000000;
-    opacity: 1.0;
+div.nav img {
+  vertical-align: middle;
+  display: table-cell;
 }
 
-.modal-container {
-
-    z-index:10000;
-    position: absolute;
-    width: 70%;
-    /*height: 75%;*/
-
-    opacity: 1;
-
-    /* center */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-
-    background-color: #fff;
-    box-shadow: 4px 4px 80px #000;
-
-    /* rounded corners */
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -o-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;
+div.nav span {
+  vertical-align: middle;
+  display: table-cell;
 }
 
-.modal-content {
-
-    padding:10px;
-    text-align: left;
-}
-
-/* -----------------------------------------------------------*/
-/* TEXT */
-
-.text {
-    font-size: 20px;
-}
-
-.subtext {
-    font-size: 15px;
-    font-weight: normal;
-}
-
-.underline {
-    text-decoration:underline !important;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.header {
-    font-size: 28px !important;
-    color: black;/*#a9bc48;*/
-    text-transform:capitalize;
-}
-
-.center-text {
-    text-align: center;
-}
-
-/* -----------------------------------------------------------*/
-/* LIST */
-
-.list {
-    overflow:scroll;
-    overflow-y:scroll;
-    overflow-x:hidden;
-
-    text-align: left;
-}
-
-/* ------------------ */
-
-.width-100 {
-    width: 100px !important;
-}
-
-.width-200 {
-    width: 200px !important;
-}
-
-.width-300 {
-    min-width: 300px !important;
-    width: 300px !important;
-    max-width: 300px !important;
-}
-
-.width-400 {
-    min-width: 400px !important;
-    width: 400px !important;
-    max-width: 400px !important;
-}
-
-.width-500 {
-    min-width: 500px !important;
-    width: 500px !important;
-    max-width: 500px !important;
-}
-
-
-.width-1200 {
-    width: 1200px !important;
-}
-
-/* ----- FIXED HEIGHT ---------------------------------------------------*/
-
-.fixed-height-500 {
-    min-height: 500px;
-    max-height: 500px;
-}
-
-.fixed-height-450 {
-    min-height: 450px;
-    max-height: 450px;
-}
-
-.fixed-height-300 {
-    min-height: 300px;
-    max-height: 300px;
-}
-
-.fixed-height-200 {
-    min-height: 200px;
-    max-height: 200px;
-}
-
-.fixed-height-150 {
-    min-height: 150px;
-    max-height: 150px;
-}
-
-.fixed-height-100 {
-    min-height: 100px;
-    max-height: 100px;
-}
-
-/* -------------------------------------------------------*/
-
-.height-300 {
-    height:300px !important;;
-}
-
-/* -------------------------------------------------------*/
-
-.margin-left-20 {
-    margin-left: 20px;
-}
-
-.margin-right-20 {
-    margin-right: 20px;
-}
-
-.margin-right-30 {
-    margin-right: 30px;
-}
-
-.margin-right-40 {
-    margin-right: 40px;
-}
-
-/* -------------------------------------------------------*/
-
-.text-left {
-    text-align: left;
-}
-
-
-
-.timeline {
-    height:400px !important;
+div.nav a {
+  margin-right:15px;
 }
