--- a/django_web_server/static/fragments/social.html
+++ b/django_web_server/static/fragments/social.html
@@ -14,7 +14,7 @@
 	<br/>
 
 	<div>
-		<div style='float:left;margin-left:20px;width:520px;min-width:520px;'>
+<!-- 		<div style='float:left;margin-left:20px;width:520px;min-width:520px;'>
 			<img
 				ng-src="/static/img/twitter.64x64.png"
 				alt="twitter" />
@@ -26,7 +26,7 @@
 				data-widget-id="621299416310415360"
 				style='width:520px;'
 				>@FisherRoleanProperty</a>
-		</div>
+		</div> -->
 		<div style='float:left;width:520px;min-width:520px;'>
 			<br/>
 			<br/>
