--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -34,14 +34,6 @@ button:focus {
 	src: local('Open Sans Bold'), local('OpenSans-Bold'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzOgdm0LZdjqr5-oayXSOefg.woff2) format('woff2'), url(http://fonts.gstatic.com/s/opensans/v13/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format('woff');
 }
 
-.grey-text {
-	color: #676767;
-}
-
-.green-text {
-	color: #a0bf14;
-}
-
 /* --------------------------------------------------------------------------------- */
 
 html, body {
@@ -60,8 +52,36 @@ a {
 /* --------------------------------------------------------------------------------- */
 /* NAV BAR */
 
+/*
+#############
+Colours:
+#############
+
+Green:
+#a0bf14
+
+Dark Grey:
+#252525
+
+Very light Grey:
+#f5f5f5
+*/
+
+.grey-text {
+	color: #676767;
+}
+
+.green-text {
+	color: #a0bf14;
+}
+
+/* #f5f5f5 */
 .light-grey-background {
 	background-color: #f0f0f0;
+}
+
+.dark-grey-background {
+	background-color: #252525;
 }
 
 .nav-active {
@@ -95,4 +115,35 @@ div.nav span {
 
 div.nav a {
   margin-right:15px;
+}
+
+/* ---------------------------- */
+
+div.contact {
+  display: table;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+div.contact img {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+div.contact span {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+/* ---------------------------- */
+
+.margin-left-20 {
+	margin-left: 20px;
+}
+
+.bold {
+	font-weight: bold;
 }
