--- a/django_web_server/static/fragments/contactbar.html
+++ b/django_web_server/static/fragments/contactbar.html
@@ -1,4 +1,4 @@
-<div>
+<div id='ContactBar'>
 	<div style="width:100%;" class='dark-grey-background'>
 
 		<div class='contact' style='width:100%;'>
