--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -1,4 +1,4 @@
-<div>
+<div id='NavBar'>
 	<div style="width:100%;" class='light-grey-background'>
 
 		<div class='nav' style='padding-left:100px;'>
