--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -1,3 +1,23 @@
-<div id='tailbar' class='tailbar' >
- dawg
+<div
+	id='TailBar'
+	class='light-grey dark-grey-background tailbar-container'
+	style='width:100%;height:100%;'>
+
+	<div class="first tailbar-column">
+   		<div style='font-size:large;font-weight:bold;font-style:italic;' class='grey-text'>
+   			Fisher
+   			<br/>
+   			Roeland
+   			<br/>
+   			Properties
+   		</div>
+	</div>
+
+   	<div class="second tailbar-column">
+   		dog
+	</div>
+    
+    <div class="third tailbar-column">
+    	Column right
+	</div>
 </div>
