--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -71,6 +71,10 @@ Very light Grey:
 	color: #676767;
 }
 
+.tail-bar-text {
+	color: 747474
+}
+
 .light-grey {
 	color: #f5f5f5;
 }
@@ -150,4 +154,34 @@ div.contact span {
 
 .bold {
 	font-weight: bold;
+}
+
+.viewport {
+	width:100%;
+}
+
+/* ---------------------------- */
+/* TAILBAR */
+
+.tailbar-container {
+    display: flex;
+    padding-top:15px;
+    padding-bottom:15px;
+    background-color: #252525;
+}
+
+.tailbar-column {
+    flex: 1;
+    box-sizing: border-box;
+    padding-left: 20px;
+}
+
+.first {
+    order: 1;
+}
+.second {
+    order: 2;
+}
+.third {
+    order: 3;
 }
