--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -49,6 +49,10 @@ a {
 	text-decoration:none !important;
 }
 
+.uppercase {
+	text-transform: uppercase;
+}
+
 /* --------------------------------------------------------------------------------- */
 /* NAV BAR */
 
@@ -67,8 +71,12 @@ Very light Grey:
 #f5f5f5
 */
 
+.white {
+	color: white;
+}
+
 .grey-text {
-	color: #676767;
+	color: #676767 !important;
 }
 
 .tail-bar-text {
@@ -162,6 +170,10 @@ div.contact span {
 
 /* ---------------------------- */
 /* TAILBAR */
+
+.tailbar-column a {
+	color: #676767;
+}
 
 .tailbar-container {
     display: flex;
