--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -4,17 +4,27 @@
 	style='width:100%;height:100%;'>
 
 	<div class="first tailbar-column">
-   		<div style='font-size:large;font-weight:bold;font-style:italic;' class='grey-text'>
-   			Fisher
+   		<div style='font-size:1.5em;font-weight:bold;font-family:Palatino, serif;' class='grey-text'>
+   			FISHER
    			<br/>
-   			Roeland
+   			ROELAND
    			<br/>
-   			Properties
+   			PROPERTIES
    		</div>
 	</div>
 
    	<div class="second tailbar-column">
-   		dog
+   		<div class='white' style='font-size:1.5em;'>
+   			Categories
+		</div>
+		<div ng-repeat='categoryView in model.categoryViews' class='uppercase'>
+			<a href="#" ng-click='gotoView(categoryView.view)'>
+				{{ categoryView.category }}
+				<span ng-show='model.propertiesForCategory(categoryView.category).length > 0'>
+					&nbsp;({{ model.propertiesForCategory(categoryView.category).length }})
+				</span>
+			</a>
+		</div>
 	</div>
     
     <div class="third tailbar-column">
