tailbar - twitter feed

--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -28,6 +28,14 @@
 	</div>
     
     <div class="third tailbar-column">
-    	Column right
+		<div style='width:300px;min-width:300px;'>
+	    	<a
+				class="twitter-timeline"
+				href="https://twitter.com/wsj"
+				data-widget-id="621299416310415360"
+				style='width:300px;'
+				>@FisherRoleandProperty</a>
+		</div>
+	
 	</div>
 </div>
