--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -9,6 +9,16 @@ button:focus {
 
 /* --------------------------------------------------------------------------------- */
 
+.image-overlay-text {
+	
+	position: absolute; 
+  	top: 33%; 
+  	left: 0; 
+  	width: 100%;
+  	height:77%;
+}
+
+
 .hide {
 	display:none;
 }
@@ -87,8 +97,12 @@ Very light Grey:
 	color: #f5f5f5;
 }
 
-.green-text {
+.green {
 	color: #a0bf14;
+}
+
+.vomit-green {
+	color: #a1be14;
 }
 
 /* #f5f5f5 */
