--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -5,9 +5,41 @@
 	>
 	<!-- 	style='vertical-align:middle;float:middle;' -->
 
-	<img
+<!-- 	<img
 		style='width:100%; display: block;'
-		ng-src="/static/image/slide01.jpg"/>
+		ng-src="/static/image/slide01.jpg"/> -->
+
+	<div style='width:100%; position: relative;'>
+
+		<img style='width:100%;display: block;z-index:1;' ng-src="/static/image/slide01.jpg"/>
+ 
+		<div style='position:absolute;
+		    z-index:2;
+		    top:0;
+		    left:0;
+		    width:100%;
+		    height:100%;
+		    background-color:#000000;
+		    opacity: 0.5;'>
+		</div>
+
+    	<div
+    		class='image-overlay-text light-grey'
+    		style='text-align:center;vertical-align: middle;z-index:3;'>
+	    		<span style='font-size:2em;'>    			
+    			Welcome To
+    		</span>
+    		<br/>
+    		<span style='font-size:3em;font-weight:bold;'>
+    			FISHER ROELAND PROPERTIES
+    		</span>
+    		<hr style='width:50%;height:2px;color:#a1be14;background-color:#a1be14;border:none;'/>
+    		<span style='font-size:1.5em;font-weight:bold;'>
+    			we offer unmissable development opportunities across diverse sectors
+    		</span>
+    	</div>
+
+	</div>
 
 	<!--
 
