--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -24,7 +24,7 @@
 		</div>
 
     	<div
-    		class='image-overlay-text light-grey'
+    		class='image-overlay-text light-grey unselectable'
     		style='text-align:center;vertical-align: middle;z-index:3;'>
 	    		<span style='font-size:2em;'>    			
     			Welcome To
@@ -35,7 +35,7 @@
     		</span>
     		<hr style='width:50%;height:2px;color:#a1be14;background-color:#a1be14;border:none;'/>
     		<span style='font-size:1.5em;font-weight:bold;'>
-    			we offer unmissable development opportunities across diverse sectors
+    			unmissable development opportunities across a diverse range of sectors
     		</span>
     	</div>
 
