--- a/django_web_server/static/fragments/contactbar.html
+++ b/django_web_server/static/fragments/contactbar.html
@@ -1,7 +1,7 @@
 <div id='ContactBar'>
 	<div style="width:100%;" class='dark-grey-background'>
 
-		<div class='contact' style='width:100%;'>
+		<div class='contact unselectable' style='width:100%;'>
 
 			<span style='float:left;margin-left:100px;margin-right:10px'>
 		  		<img
