--- a/django_web_server/static/fragments/navbar.html
+++ b/django_web_server/static/fragments/navbar.html
@@ -1,7 +1,7 @@
 <div id='NavBar'>
 	<div style="width:100%;" class='light-grey-background'>
 
-		<div class='nav' style='padding-left:100px;'>
+		<div class='nav unselectable' style='padding-left:100px;'>
 			<span>
 		  		<img
 					ng-src="/static/image/logo.png"
