--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -5,34 +5,49 @@
 
 	<div class="first tailbar-column">
 		<div style='width:100%;'>
-	   		<div class='grey-text frp-font'
-	   			style='width:45%;font-size:1.5em;line-height:110%;'>
-	   			<span style='font-size:1.6em;'>F</span>ISHER
-	   			<br/>
-	   			<span style='font-size:1.6em;'>R</span>OELAND
-	   			<br/>
-	   			<span style='font-size:1.6em;'>P</span>ROPERTIES
-	   		</div>
-	   		<!-- TODO = REFACTOR TO COMMON FRAGMENT WITH ContactBar -->
-	   		<div style='width:45%;'>
-		  		<img
-		  			style='margin-right:5px;	'
-					ng-src="/static/image/icon-fb.png"
-					ng-click="openFacebook();"
-					/>
-		  		<img
-		  			style='margin-right:5px'
-					ng-src="/static/image/icon-twitter.png"
-					ng-click="openTwitter();"
-					/>
-		  		<img		  			
-					ng-src="/static/image/icon-linkedin.png"
-					ng-click="openLinkedIn();"
-					/>
-	   		</div>
-   		</div>
-   		<div>
-   			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+			<div class='tailbar-blurb-header unselectable' style='width:100%;'>
+
+			  	<span style='float:left; line-height:100%; font-size:2em;'
+			  		class='grey-text frp-font'>
+		   			FISHER
+		   			<br/>
+		   			ROELAND
+		   			<br/>
+		   			PROPERTIES
+			  	</span>
+
+				<!-- BEGIN REVERSE ORDER ////////////////////////////////////// -->
+
+				<span style='float:right'>
+			  		<img
+						ng-src="/static/image/icon-linkedin.png"
+						ng-click="openLinkedIn();"
+						/>
+				</span>
+
+				<span style='float:right'>
+			  		<img
+			  			style='margin-right:10px'
+						ng-src="/static/image/icon-twitter.png"
+						ng-click="openTwitter();"
+						/>
+				</span>
+
+				<span style='float:right;margin-right:10px'>
+			  		<img
+						ng-src="/static/image/icon-fb.png"
+						ng-click="openFacebook();"
+						/>
+				</span>
+
+			  	<!-- END REVERSE ORDER //////////////////////////////////////// -->
+			</div>
+
+			<div class='justify grey-text'>
+			   	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</div>
+
    		</div>
 	</div>
 
