--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -15,7 +15,7 @@ button:focus {
   	top: 33%; 
   	left: 0; 
   	width: 100%;
-  	height:77%;
+  	/*height:77%;*/
 }
 
 
@@ -136,13 +136,10 @@ Very light Grey:
 	user-select: none;
 }
 
+/* ------------------------------------- */
+
 div.nav {
   display: table;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 div.nav img {
@@ -163,11 +160,6 @@ div.nav a {
 
 div.contact {
   display: table;
-
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 div.contact img {
@@ -176,6 +168,22 @@ div.contact img {
 }
 
 div.contact span {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+/* ---------------------------- */
+
+div.tailbar-blurb-header {
+  display: table;
+}
+
+div.tailbar-blurb-header img {
+  vertical-align: middle;
+  display: table-cell;
+}
+
+div.tailbar-blurb-header span {
   vertical-align: middle;
   display: table-cell;
 }
@@ -236,4 +244,10 @@ div.contact span {
 
 .clear-float {
 	clear: both;
+}
+
+/* ------------------- */
+
+.justify {
+	text-align: justify;
 }
